--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@formkit/vue": "^1.0.0-beta.8",
     "axios": "^0.27.2",
     "codemirror": "^6.0.0",
+    "date-fns": "^2.28.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
   },
